--- a/config.json
+++ b/config.json
@@ -5,27 +5,14 @@
   "log_level": "info",
   "pretty_print_json": true,
   "max_body_size": 1048576,
-  "policies": [
+  "policy_providers": [
     {
-      "name": "drop-debug-logs",
-      "policy_type": "filter",
-      "telemetry_type": "log",
-      "regexes": ["debug", "trace"],
-      "action": "drop"
+      "type": "file",
+      "path": "policies.json"
     },
     {
-      "name": "keep-error-logs",
-      "policy_type": "filter",
-      "telemetry_type": "log",
-      "regexes": ["error", "critical", "fatal"],
-      "action": "keep"
-    },
-    {
-      "name": "drop-test-metrics",
-      "policy_type": "filter",
-      "telemetry_type": "metric",
-      "regexes": ["test\\."],
-      "action": "drop"
+      "type": "http",
+      "url": "http://localhost:9090/v1/policy/sync"
     }
   ]
 }
