--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "listen_address": "127.0.0.1",
   "listen_port": 8080,
   "upstream_url": "https://agent-http-intake.logs.us5.datadoghq.com",
+  "workspace_id": "90A6EFC2-27B8-41BC-9343-43BFB1DF0732",
   "log_level": "info",
   "pretty_print_json": true,
   "max_body_size": 1048576,
