--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -222,3 +222,9 @@ tasks:
         else
           echo "No Zig REPL found. Install ziggy: https://github.com/zigtools/ziggy"
         fi
+
+  update:protos:
+    desc: "Update proto files"
+    cmds:
+      - buf export buf.build/tero/policy -o proto/policy
+      - task: build:protos
