--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -29,16 +29,15 @@ data:
           "name": "drop-echo-logs",
           "policy_type": "filter",
           "telemetry_types": ["logs"],
-          "matchers": [{ "path": "$.ddsource", "regex": "nginx" }],
+          "matchers": [{ "match_type": "log_attribute", "key": "ddsource", "regex": "nginx" }],
           "action": "drop"
         },
         {
-          "name": "drop-debug-logs",
+          "name": "drop-no-such-file-or-directory-logs",
           "policy_type": "filter",
           "telemetry_types": ["logs"],
           "matchers": [
-            { "path": "$.body", "regex": "debug" },
-            { "path": "$.body", "regex": "trace" }
+            { "match_type": "log_body", "regex": "no such file or directory" }
           ],
           "action": "drop"
         },
@@ -46,7 +45,7 @@ data:
           "name": "drop-debug-level",
           "policy_type": "filter",
           "telemetry_types": ["logs"],
-          "matchers": [{ "path": "$.level", "regex": "DEBUG" }],
+          "matchers": [{ "match_type": "log_severity_text", "regex": "DEBUG" }],
           "action": "drop"
         },
         {
@@ -54,9 +53,9 @@ data:
           "policy_type": "filter",
           "telemetry_types": ["logs"],
           "matchers": [
-            { "path": "$.severity_text", "regex": "error" },
-            { "path": "$.severity_text", "regex": "critical" },
-            { "path": "$.severity_text", "regex": "fatal" }
+            { "match_type": "log_severity_text", "regex": "error" },
+            { "match_type": "log_severity_text", "regex": "critical" },
+            { "match_type": "log_severity_text", "regex": "fatal" }
           ],
           "action": "keep"
         }
@@ -82,7 +81,7 @@ spec:
     spec:
       containers:
         - name: tero-edge
-          image: tero-edge-datadog:latest
+          image: edge-datadog:v02
           imagePullPolicy: IfNotPresent
           args:
             - /etc/tero/config.json
@@ -150,6 +149,8 @@ spec:
               fieldPath: status.hostIP
         - name: DD_LOGS_CONFIG_LOGS_DD_URL
           value: "http://$(HOST_IP):8080"
+        # - name: DD_LOGS_CONFIG_LOGS_DD_URL
+        #   value: "http://host.docker.internal:8080"
       # Ensure agent runs on same nodes as Tero Edge
       tolerations:
         - operator: Exists
