--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,9 +29,13 @@ on:
         options:
           - datadog
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 permissions:
   contents: read
-  id-token: write
+  packages: write
 
 concurrency:
   group: release-${{ github.ref }}
@@ -52,35 +56,26 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Google Auth
-        id: auth
-        uses: google-github-actions/auth@v2
-        with:
-          token_format: access_token
-          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.GCP_GITHUB_ACTIONS_SERVICE_ACCOUNT }}
-
-      - name: Docker Auth
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: oauth2accesstoken
-          password: ${{ steps.auth.outputs.access_token }}
-          registry: ${{ secrets.GCP_REGION }}-docker.pkg.dev
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Determine tags
         id: tags
         run: |
-          REGISTRY="${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/edge"
-          IMAGE="edge-${{ matrix.distribution }}"
+          IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.distribution }}"
 
           # Always include SHA and latest
-          TAGS="${REGISTRY}/${IMAGE}:${{ github.sha }}"
-          TAGS="${TAGS},${REGISTRY}/${IMAGE}:latest"
+          TAGS="${IMAGE}:${{ github.sha }}"
+          TAGS="${TAGS},${IMAGE}:latest"
 
           # Add version tag for releases
           if [[ "${{ github.event_name }}" == "release" ]]; then
             VERSION="${GITHUB_REF_NAME#v}"
-            TAGS="${TAGS},${REGISTRY}/${IMAGE}:${VERSION}"
+            TAGS="${TAGS},${IMAGE}:${VERSION}"
             echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
           fi
 
