--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,9 +6,6 @@
 #
 # Can also be triggered manually to push :latest from any branch.
 #
-# Architecture builds run on native runners (amd64 on ubuntu, arm64 on ubuntu-arm)
-# then merged into a multi-arch manifest.
-#
 # Tags pushed (release):
 # - :v1.2.3 (semantic version from release tag)
 # - :latest
@@ -45,61 +42,23 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  build-and-push:
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
     strategy:
       fail-fast: false
       matrix:
         distribution: ${{ github.event_name == 'workflow_dispatch' && fromJson(format('["{0}"]', inputs.distribution)) || fromJson('["datadog"]') }}
-        include:
-          - arch: amd64
-            runner: ubuntu-latest
-          - arch: arm64
-            runner: ubuntu-24.04-arm
-    runs-on: ${{ matrix.runner }}
-    timeout-minutes: 30
-    outputs:
-      image: ${{ steps.image.outputs.name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Determine image name
-        id: image
-        run: |
-          IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.distribution }}"
-          echo "name=${IMAGE}" >> "$GITHUB_OUTPUT"
-
-      - name: Build and Push Container
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: Dockerfile
-          platforms: linux/${{ matrix.arch }}
-          build-args: |
-            DISTRIBUTION=${{ matrix.distribution }}
-          push: true
-          tags: ${{ steps.image.outputs.name }}:${{ github.sha }}-${{ matrix.arch }}
-          cache-from: type=gha,scope=edge-${{ matrix.distribution }}-${{ matrix.arch }}
-          cache-to: type=gha,mode=max,scope=edge-${{ matrix.distribution }}-${{ matrix.arch }}
-
-  merge:
-    needs: build
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    strategy:
-      matrix:
-        distribution: ${{ github.event_name == 'workflow_dispatch' && fromJson(format('["{0}"]', inputs.distribution)) || fromJson('["datadog"]') }}
-    steps:
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -123,20 +82,21 @@ jobs:
             echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
           fi
 
-          echo "image=${IMAGE}" >> "$GITHUB_OUTPUT"
           echo "tags=${TAGS}" >> "$GITHUB_OUTPUT"
+          echo "Tags to push: ${TAGS}"
 
-      - name: Create multi-arch manifest
-        run: |
-          IMAGE="${{ steps.tags.outputs.image }}"
-
-          # Create and push manifest for each tag
-          for TAG in $(echo "${{ steps.tags.outputs.tags }}" | tr ',' ' '); do
-            echo "Creating manifest for ${TAG}..."
-            docker buildx imagetools create -t "${TAG}" \
-              "${IMAGE}:${{ github.sha }}-amd64" \
-              "${IMAGE}:${{ github.sha }}-arm64"
-          done
+      - name: Build and Push Container
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile
+          platforms: linux/amd64,linux/arm64
+          build-args: |
+            DISTRIBUTION=${{ matrix.distribution }}
+          push: true
+          tags: ${{ steps.tags.outputs.tags }}
+          cache-from: type=gha,scope=edge-${{ matrix.distribution }}
+          cache-to: type=gha,mode=max,scope=edge-${{ matrix.distribution }}
 
       - name: Summary
         run: |
