--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,8 @@
 #
 # Can also be triggered manually to push :latest from any branch.
 #
-# Builds run separately for each architecture, then merged into a multi-arch manifest.
+# Builds run on native runners (amd64 on ubuntu-latest, arm64 on arm-4-core),
+# then merged into a multi-arch manifest.
 #
 # Tags pushed (release):
 # - :v1.2.3 (semantic version from release tag)
@@ -44,20 +45,16 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  build-amd64:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
         distribution: ${{ github.event_name == 'workflow_dispatch' && fromJson(format('["{0}"]', inputs.distribution)) || fromJson('["datadog"]') }}
-        arch: [amd64, arm64]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -74,16 +71,50 @@ jobs:
         with:
           context: .
           file: Dockerfile
-          platforms: linux/${{ matrix.arch }}
+          platforms: linux/amd64
           build-args: |
             DISTRIBUTION=${{ matrix.distribution }}
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.distribution }}:${{ github.sha }}-${{ matrix.arch }}
-          cache-from: type=gha,scope=edge-${{ matrix.distribution }}-${{ matrix.arch }}
-          cache-to: type=gha,mode=max,scope=edge-${{ matrix.distribution }}-${{ matrix.arch }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.distribution }}:${{ github.sha }}-amd64
+          cache-from: type=gha,scope=edge-${{ matrix.distribution }}-amd64
+          cache-to: type=gha,mode=max,scope=edge-${{ matrix.distribution }}-amd64
+
+  build-arm64:
+    runs-on: arm-4-core
+    timeout-minutes: 30
+    strategy:
+      fail-fast: false
+      matrix:
+        distribution: ${{ github.event_name == 'workflow_dispatch' && fromJson(format('["{0}"]', inputs.distribution)) || fromJson('["datadog"]') }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and Push Container
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile
+          platforms: linux/arm64
+          build-args: |
+            DISTRIBUTION=${{ matrix.distribution }}
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.distribution }}:${{ github.sha }}-arm64
+          cache-from: type=gha,scope=edge-${{ matrix.distribution }}-arm64
+          cache-to: type=gha,mode=max,scope=edge-${{ matrix.distribution }}-arm64
 
   merge:
-    needs: build
+    needs: [build-amd64, build-arm64]
     runs-on: ubuntu-latest
     timeout-minutes: 10
     strategy:
