--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -90,6 +90,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Wait for Docker
+        run: |
+          timeout 10 bash -c 'while ! docker version; do sleep 1; done'
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
