--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -87,12 +87,17 @@ jobs:
       matrix:
         distribution: ${{ github.event_name == 'workflow_dispatch' && fromJson(format('["{0}"]', inputs.distribution)) || fromJson('["datadog"]') }}
     steps:
+      - name: Install Docker
+        run: |
+          if ! command -v docker &> /dev/null; then
+            curl -fsSL https://get.docker.com | sudo sh
+            sudo usermod -aG docker $USER
+          fi
+          sudo systemctl start docker || sudo service docker start || true
+          timeout 30 bash -c 'while ! docker version; do sleep 1; done'
+
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Wait for Docker
-        run: |
-          timeout 10 bash -c 'while ! docker version; do sleep 1; done'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
