--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,9 +91,11 @@ jobs:
         run: |
           if ! command -v docker &> /dev/null; then
             curl -fsSL https://get.docker.com | sudo sh
-            sudo usermod -aG docker $USER
           fi
+          sudo usermod -aG docker $USER
           sudo systemctl start docker || sudo service docker start || true
+          # Fix socket permissions for current session
+          sudo chmod 666 /var/run/docker.sock
           timeout 30 bash -c 'while ! docker version; do sleep 1; done'
 
       - name: Checkout
