--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,7 @@ jobs:
           - platform: linux/amd64
             runner: ubuntu-latest
           - platform: linux/arm64
-            runner: arm-4-core
+            runner: ubuntu-24.04-arm
     runs-on: ${{ matrix.arch.runner }}
     timeout-minutes: 30
     steps:
