--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ zig-out/
 /docgen_tmp/
 bench/debug
 bench/results
+bench/bin
 
 # Although this was renamed to .zig-cache, let's leave it here for a few
 # releases to make it less annoying to work with multiple branches.
