--- a/bench/config.json
+++ b/bench/config.json
@@ -2,9 +2,14 @@
   "listen_address": "127.0.0.1",
   "listen_port": 8080,
   "upstream_url": "http://127.0.0.1:9999",
-  "workspace_id": "benchmark",
+  "workspace_id": "benchmark-workspace",
   "log_level": "err",
-  "max_body_size": 4194304,
+  "max_body_size": 1048576,
   "max_upstream_retries": 10,
+  "service": {
+    "name": "edge-benchmark",
+    "namespace": "benchmark",
+    "version": "1.0.0"
+  },
   "policy_providers": []
 }
