--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -151,6 +151,18 @@ tasks:
     cmds:
       - ./bench/run.sh --skip-build
 
+  benchmark:history:
+    desc: "Run benchmarks and save to dated history folder"
+    aliases: [bench-history, bmh]
+    vars:
+      DATE:
+        sh: date -u +"%Y-%m-%d"
+      REQUESTS: '{{.REQUESTS | default "10000"}}'
+      CONNECTIONS: '{{.CONNECTIONS | default "50"}}'
+    cmds:
+      - mkdir -p bench/history/{{.DATE}}
+      - ./bench/run.sh --requests {{.REQUESTS}} --connections {{.CONNECTIONS}} --output bench/history/{{.DATE}}
+
   echo-server:
     desc: "Build and run the echo server for manual testing"
     cmds:
