--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -37,8 +37,8 @@ jobs:
       - name: Install oha
         run: |
           # oha is not available in Hermit, install from GitHub releases
-          curl -sSfL https://github.com/hatoo/oha/releases/download/v1.4.7/oha-linux-amd64 -o "$HOME/.local/bin/oha"
           mkdir -p "$HOME/.local/bin"
+          curl -sSfL https://github.com/hatoo/oha/releases/download/v1.12.0/oha-linux-amd64 -o "$HOME/.local/bin/oha"
           chmod +x "$HOME/.local/bin/oha"
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
@@ -59,11 +59,14 @@ jobs:
           jq --version
           zig version
 
+      - name: Setup CI environment
+        run: task ci:setup
+
       - name: Run benchmarks
-        run: |
-          task benchmark:history \
-            REQUESTS="${{ github.event.inputs.requests || '10000' }}" \
-            CONNECTIONS="${{ github.event.inputs.connections || '50' }}"
+        env:
+          REQUESTS: ${{ github.event.inputs.requests || '10000' }}
+          CONNECTIONS: ${{ github.event.inputs.connections || '50' }}
+        run: task benchmark:history
 
       - name: Commit results
         run: |
