--- a/config.json
+++ b/config.json
@@ -14,7 +14,8 @@
     {
       "id": "http",
       "type": "http",
-      "url": "http://localhost:9090/v1/policy/sync"
+      "url": "http://localhost:9090/v1/policy/sync",
+      "headers": [{ "name": "Authorization", "value": "Bearer my-token" }]
     }
   ]
 }
